# HR-Plus

./: .gitignore  CLAUDE.md  HACKATHON_STATUS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  TEST_REPORT.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  coordinator.py  jd_assist.py  marathon_agent.py  offer_generator.py  phone_interview_agent.py  phone_screen_agent.py  sourcing_assistant.py  talent_assessor.py  talent_screener.py
backend/app/agents/tools/: __init__.py  assessment_tools.py  jd_tools.py  offer_tools.py  screening_tools.py
backend/app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
backend/app/schemas/: __init__.py  assessment.py  auth.py  campaigns.py  candidate.py  job.py  offer.py  phone_screen.py  sourcing.py  sourcing_chat.py
backend/app/services/: __init__.py  apify.py  apollo.py  calcom.py  document.py  elevenlabs.py  email.py  github_search.py  proxycurl.py  resume_parser.py  smtp_email.py  storage.py  supabase.py  vapi.py  video_analyzer.py
backend/app/utils/: __init__.py  logging.py  templates.py
backend/app/workers/: __init__.py  marathon_worker.py
backend/mock_data/: __init__.py  applications.json  assessments.json  campaigns.json  candidates.json  companies.json  jobs.json  loader.py  offers.json  phone_screens.json  sourced_candidates.json  test_mock_data.py
backend/mock_data/documents/: README.md  __init__.py  convert_to_pdf.py
backend/templates/emails/: application_received.html  assessment_invite.html  campaign_outreach.html  offer_accepted.html  offer_letter.html
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_assessment_api.py  test_jd_api.py  test_phone_interview_api.py  test_screening_api.py  test_sourcing_to_interview_e2e.py
files/: AGENT_SPECS.md  (+14 more)
(+124 files in other folders)
