[project]
name = "talent-ai-backend"
version = "0.1.0"
description = "TalentAI - Autonomous Talent Acquisition Platform Backend"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Google ADK (includes Gemini support)
    "google-adk>=1.0.0",
    # Database
    "supabase>=2.10.0",
    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0",
    # Document processing
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    # Background tasks
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "jinja2>=3.1.6",
    "aiosmtplib>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from err (too verbose for HTTP exceptions)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
